Fix: disable trimming is now persistent

--- a/panel.html
+++ b/panel.html
@@ -54,7 +54,7 @@
   <div class="row">
     <label class="toggle" id="pauseToggle">
       <div class="switch" id="pauseSwitch"></div>
-      <span>Pause trimming</span>
+      <span>Disable trimming</span>
     </label>
     <button class="btn secondary" id="reset">Reset counters</button>
   </div>
